Converted to Java 8, added test for failing syntax, merged